# moon_engine

./: .clang-format  .editorconfig  .gitignore  .gitmodules  BUILD.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg.json
editor/: CMakeLists.txt
editor/assets/shaders/: flat_color.glsl
editor/assets/shaders/hlsl/: Compile.bat  rootsig.cso  texture.frag.hlsl
editor/src/: editor.cpp  editor_app.cpp  editor_layer.cpp  editor_layer.h  test.cpp
engine/: CMakeLists.txt
engine/include/: moon.h
engine/platform/apple/: apple_input.cpp  apple_input.h  apple_window.cpp  apple_window.h
engine/platform/linux/: linux_input.cpp  linux_window.cpp  linux_window.h
engine/platform/opengl/: opengl_buffer.cpp  opengl_buffer.h  opengl_context.cpp  opengl_context.h  opengl_renderer_api.cpp  opengl_renderer_api.h  opengl_shader.cpp  opengl_shader.h  opengl_texture.cpp  opengl_texture.h  opengl_vertex_array.cpp  opengl_vertex_array.h
engine/platform/windows/: windows_input.cpp  windows_input.h  windows_window.cpp  windows_window.h
engine/src/: moonpch.cpp  moonpch.h  test.h
engine/src/core/: application.cpp  application.h  core.h  entry_point.h  input.h  key_codes.h  layer.cpp  layer.h  layer_stack.cpp  layer_stack.h  log.cpp  log.h  window.h
engine/src/core/events/: application_event.h  event.h  key_event.h  mouse_event.h
engine/src/core/imgui/: imgui_layer.cpp  imgui_layer.h
engine/src/core/renderer/: buffer.cpp  buffer.h  camera.cpp  camera.h  graphics_context.h  render_command.h  renderer.cpp  renderer.h  renderer_api.h  shader.cpp  shader.h  texture.cpp  texture.h  vertex_array.cpp  vertex_array.h
engine/src/moon/: application.cpp  application.h  input.h  layer.h  layer_stack.cpp  log.cpp  log.h  mouse_codes.h  orthographic_camera_controller.cpp  orthographic_camera_controller.h  window.h
engine/src/moon/Debug/: instrumentor.h
engine/src/moon/core/: application.cpp  application.h  core.h  entry_point.h  input.h  key_codes.h  layer.h  layer_stack.cpp  layer_stack.h  log.cpp  mouse_codes.h  timestep.h  window.h
engine/src/moon/events/: application_event.h  event.h  key_event.h  mouse_event.h
engine/src/moon/imgui/: imgui_layer.cpp  imgui_layer.h
engine/src/moon/renderer/: binding_resource.cpp  binding_resource.h  binding_set.cpp  binding_set.h  buffer.cpp  buffer.h  camera.cpp  camera.h  command_buffer.h  command_list.h  device.h  framebuffer.cpp  framebuffer.h  graphics_context.cpp  graphics_context.h  handle.cpp  handle.h  orthographic_camera_controller.cpp  orthographic_camera_controller.h  pipeline.cpp  pipeline.h  pool.h  render_command.cpp  render_command.h  render_types.h  renderer.cpp  renderer.h  renderer2d.cpp  renderer2d.h  renderer_api.cpp  renderer_api.h  root_signature.cpp  root_signature.h  shader.cpp  shader.h  subtexture2d.cpp  subtexture2d.h  texture.cpp  texture.h  vertex_array.cpp  (+1 more)
engine/src/moon/scene/: components.h  entity.cpp  entity.h  scene.cpp  scene.h
engine/src/platform/apple/: apple_input.cpp  apple_window.cpp  apple_window.h
engine/src/platform/d3d12/: d3d12_binding_set.cpp  d3d12_binding_set.h  d3d12_buffer.cpp  d3d12_buffer.h  d3d12_command_list.cpp  d3d12_command_list.h  d3d12_context.cpp  d3d12_context.h  d3d12_framebuffer.cpp  d3d12_framebuffer.h  d3d12_imgui_layer.cpp  d3d12_imgui_layer.h  d3d12_include.h  d3d12_pipeline.cpp  d3d12_pipeline.h  d3d12_renderer_api.cpp  d3d12_renderer_api.h  d3d12_root_signature.cpp  d3d12_root_signature.h  d3d12_shader.cpp  d3d12_shader.h  d3d12_texture.cpp  d3d12_texture.h  d3d12_vertex_array.cpp  d3d12_vertex_array.h
engine/src/platform/directx12/: directx_buffer.cpp  directx_buffer.h  directx_command_list.cpp  directx_command_list.h  directx_context.cpp  directx_context.h  directx_framebuffer.cpp  directx_framebuffer.h  directx_imgui_layer.cpp  directx_imgui_layer.h  directx_pipeline.cpp  directx_pipeline.h  directx_renderer_api.cpp  directx_renderer_api.h  directx_shader.cpp  directx_shader.h  directx_texture.cpp  directx_texture.h  directx_vertex_array.cpp  directx_vertex_array.h
engine/src/platform/linux/: linux_input.cpp  linux_input.h  linux_window.cpp  linux_window.h
engine/src/platform/opengl/: opengl_buffer.cpp  opengl_buffer.h  opengl_command_list.h  opengl_context.cpp  opengl_context.h  opengl_framebuffer.cpp  opengl_framebuffer.h  opengl_imgui_layer.cpp  opengl_imgui_layer.h  opengl_renderer_api.cpp  opengl_renderer_api.h  opengl_shader.cpp  opengl_shader.h  opengl_texture.cpp  opengl_texture.h  opengl_vertex_array.cpp  opengl_vertex_array.h
engine/src/platform/vulkan/: vk.cpp  vk.h  vk_buffer.cpp  vk_buffer.h  vk_command_buffer.cpp  vk_command_buffer.h  vk_context.cpp  vk_context.h  vk_device.cpp  vk_device.h  vk_pipelines.cpp  vk_pipelines.h  vk_render_types.cpp  vk_render_types.h  vk_renderer_api.cpp  vk_renderer_api.h  vk_shader.cpp  vk_shader.h  vk_swapchain.cpp  vk_swapchain.h  vk_texture.cpp  vk_texture.h
engine/src/platform/vulkan/utils/: vk_initializers.h  vk_utils.cpp  vk_utils.h
engine/src/platform/windows/: windows_input.cpp  windows_input.h  windows_window.cpp  windows_window.h
overlays/vulkan/: vcpkg.json
overlays/vulkan-loader/: vcpkg.json
sandbox/: CMakeLists.txt
sandbox/assets/shaders/: flat_color.glsl  texture.glsl
sandbox/assets/shaders/hlsl/: Compile.bat  rootsig.hlsli  texture.frag.cso  texture.frag.hlsl  texture.vert.cso  texture.vert.hlsl
sandbox/assets/shaders/slang/: compile.bat  texture.slang
sandbox/src/: sandbox.cpp  sandbox2d.cpp  sandbox2d.h
vcpkg-overlays/: x64-dynamic-glad.cmake  x64-static-glad.cmake
